# stream_station_rewrite

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml
app/: constants.py  crud.py  database.py  main.py  models.py  queue.py  task.yaml  taskconfig.py  variables.py
app/configs/: config.sample.yaml
app/db/: app.db
app/players/: mediaplayerbase.py  mpdplayer.py  mpvplayer.py  spotifymprisplayer.py
app/players/temp/: mpvplayer.py
app/routers/: downloader.py  favourites.py  history.py  player.py  podcasts.py  queue_manager.py  search.py  songs_fetchers.py  spotify_tasks.py  tasks.py
app/utils/: check_utils.py  command.py  history.py  media_handlers.py  metadata_fetchers.py  player_utils.py  resource_fetchers.py  spotify_auth_utils.py  spotify_fetchers.py  templates.py  ytdlp_helpers.py
spotdl_tmp/: spotdl_config.yaml
task_programs/: likedSongsDownloader.py
