[project]
name = "stream-station-rewrite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.13",
    "musicbrainzngs>=0.7.1",
    "mutagen>=1.47.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "spotdl>=3.9.6",
    "spotipy>=2.25.1",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.3",
    "validators>=0.35.0",
    "yt-dlp>=2025.6.9",
]
